# DjangoWebApp

./: .env_template  .gitignore  README.md  catalog.json  groups.json  manage.py  pyproject.toml  requirement.txt
ShopProducts/: settings.py  urls.py  wsgi.py
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: blogs_confirm_delete.html  blogs_detail.html  blogs_form.html  blogs_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options.py  0003_product_owner.py  0004_product_status.py  0005_alter_product_options.py
catalog/templates/: base.html  contacts.html  details_product.html  home.html
catalog/templates/catalog/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: footer.html  menu.html
catalog/templatetags/: my_tags.py
config/: asgi.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: add_super_user.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
